language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_type_constructor_annotation.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype Wibble {\n    Wibble(arg: String)\n}\n"
---

type Wibble {
    Wibble(arg: String)
                ▔▔▔▔↑▔ 
}


----- Hover content (markdown) -----
```gleam
gleam.String
```
