language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_type_constructor_with_label.snap
---
source: language-server/src/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\ntype Wibble {\n    /// Some more exciting documentation\n    Wibble(arg: String)\n    /// The most exciting documentation\n    Wobble(Int)\n}\n"
---

/// Exciting documentation
/// Maybe even multiple lines
type Wibble {
    /// Some more exciting documentation
    Wibble(arg: String)
    ↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    /// The most exciting documentation
    Wobble(Int)
}


----- Hover content (markdown) -----
```gleam
Wibble(arg: String)
```
 Some more exciting documentation
