language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_variable_in_use_expression_1.snap
---
source: language-server/src/tests/hover.rs
expression: "\nfn b(fun: fn(Int) -> String) {\n  fun(42)\n}\n\nfn do_stuff() {\n  let c = \"done\"\n\n  use a <- b\n  c\n}\n"
---

fn b(fun: fn(Int) -> String) {
  fun(42)
}

fn do_stuff() {
  let c = "done"

  use a <- b
           ↑
  c
}


----- Hover content (markdown) -----
```gleam
fn(fn(Int) -> String) -> String
```
