language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_works_even_for_invalid_code.snap
---
source: language-server/src/tests/hover.rs
expression: "\nfn invalid() { 1 + Nil }\nfn valid() { Nil }\n"
---

fn invalid() { 1 + Nil }
fn valid() { Nil }
▔▔▔↑▔▔▔▔▔▔        


----- Hover content (markdown) -----
```gleam
fn() -> Nil
```
