language-server/src/tests/snapshots/gleam_language_server__tests__hover__no_documentation_for_shared_record_field.snap
---
source: language-server/src/tests/hover.rs
expression: "\npub type Wibble {\n  Wibble(\n    /// This is some documentation about the wibble field.\n    wibble: Int\n  )\n  Wobble(\n    /// Here's some documentation explaining a field of Wobble\n    wibble: Int\n  )\n}\n\npub fn wibble(w: Wibble) {\n  w.wibble\n}\n"
---

pub type Wibble {
  Wibble(
    /// This is some documentation about the wibble field.
    wibble: Int
  )
  Wobble(
    /// Here's some documentation explaining a field of Wobble
    wibble: Int
  )
}

pub fn wibble(w: Wibble) {
  w.wibble
    ▔▔▔▔↑▔
}


----- Hover content (markdown) -----
```gleam
Int
```
## Wibble

 This is some documentation about the wibble field.

## Wobble

 Here's some documentation explaining a field of Wobble
