language-server/src/tests/snapshots/gleam_language_server__tests__hover__no_hexdocs_link_when_hovering_over_local_module.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble\n"
---

import wibble
▔▔▔▔▔▔▔↑▔▔▔▔▔


----- Hover content (markdown) -----
```gleam
wibble
```
 This is the wibble module.
 Here is some documentation about it.
 This module does stuff
